--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.0"
-serde = { version = "1.0.152", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 csv = "1.1.6"
+serde_json = "1.0"
